<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NeHaber</string>
    <string name="hos_geldiniz">Hoş Geldiniz</string>
    <string name="devam_etmek_icin_giris_yapiniz">Devam etmek için giriş yapınız.</string>
    <string name="mail">Email</string>
    <string name="sifre">Şifre</string>
    <string name="yeni_hesap_olustur">Yeni Hesap Oluştur</string>
    <string name="resim_ekle">Resim Ekle</string>
    <string name="ad">Ad</string>
    <string name="sifre_tekrar">Şifreyi Onayla</string>
    <string name="giris_yap">GİRİŞ YAP</string>
    <string name="uye_ol">Üye Ol</string>
    <string name="select_user">Select User</string>
    <string name="kullanici_seciniz">Kullanıcı Seçiniz</string>
    <string name="mesaj">Mesaj</string>
    <string name="online">Online</string>
</resources>

